# rust-dangerous

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  codecov.yml  generate-callgraph.sh  tarpaulin.toml
.github/:  FUNDING.yml
.github/workflows/: build.yml  ci.yml  test.yml
bench/: Cargo.toml
bench/benches/: context.rs  reader.rs
benches/: context.rs  reader.rs
examples/: anyhow.rs  context.rs  custom.rs  debug.rs  errors.rs  external.rs  ini.rs  json.rs  minimal.rs  nom.rs  streaming.rs  zerocopy.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: display.rs  general.rs  string.rs
src/: entry.rs  error.rs  error_display.rs  input.rs  input_display.rs  intro.rs  lib.rs  macros.rs  reader.rs  string.rs  utf8.rs  utils.rs  verbose_error.rs
src/display/: ansi.rs  element.rs  error.rs  fmt.rs  input.rs  iters.rs  mod.rs  section.rs  section_unit.rs  unit.rs  writer.rs
src/error/: backtrace.rs  context.rs  display.rs  expected.rs  fatal.rs  invalid.rs  length.rs  mod.rs  retry.rs  traits.rs  value.rs
src/error/expected/: length.rs  mod.rs  valid.rs  value.rs
src/guide/: external.rs  faq.rs  mod.rs
src/input/: bound.rs  byte_len.rs  bytes.rs  display.rs  entry.rs  flags.rs  internal.rs  maybe.rs  mod.rs  pattern.rs  prefix.rs  span.rs  string.rs  token.rs  traits.rs
src/input/bytes/: array.rs  mod.rs  pattern.rs  prefix.rs
src/input/string/: maybe.rs  mod.rs  pattern.rs  prefix.rs
src/reader/: bytes.rs  input.rs  mod.rs  num.rs  peek.rs  string.rs
src/support/: core.rs  mod.rs  nom.rs  std.rs  zc.rs
src/util/: alt_iter.rs  byte.rs  fast.rs  mod.rs  slice.rs  utf8.rs
tests/: common.rs  test_display.rs  test_errors.rs  test_input.rs  test_nom.rs  test_pattern.rs  test_reader.rs  test_reader_bytes.rs  test_reader_string.rs  test_span.rs  test_usage.rs
