[package]
name = "dangerous"
version = "0.6.0"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
description = "Safely and explicitly parse untrusted / dangerous data"
categories = ["no-std", "parsing"]
documentation = "https://docs.rs/dangerous"
homepage = "https://github.com/avitex/rust-dangerous"
repository = "https://github.com/avitex/rust-dangerous"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]
keywords = ["parsing", "untrusted"]

[features]
default = ["retry", "full-context", "simd", "unicode"]
# Enables both `std::error::Error` impls and allocations.
std = ["alloc"]
# Enables allocations.
alloc = []
# Enables retry support.
retry = []
# Enables all supported SIMD optimisations.
simd = ["bytecount"]
# Enables improved unicode printing support.
unicode = ["unicode-width"]
# Enables full context backtraces.
full-context = ["alloc"]
# Enables const generic support.
# Will be removed in `1.51`.
unstable-const-generics = []

[dependencies]
zc = { version = "0.3", optional = true, default-features = false }
bytecount = { version = "0.6", optional = true }
unicode-width = { version = "0.1", optional = true }

[dev-dependencies]
zc = "0.3"
indoc = "1.0"

[[example]]
name = "json"
required-features = ["std"]

[[example]]
name = "streaming"
required-features = ["std"]

[[example]]
name = "zerocopy"
required-features = ["zc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
