[package]
name = "dangerous"
version = "0.10.0"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2021"
rust-version = "1.57"
description = "Safely and explicitly parse untrusted / dangerous data"
categories = ["no-std", "parsing"]
documentation = "https://docs.rs/dangerous"
homepage = "https://github.com/avitex/rust-dangerous"
repository = "https://github.com/avitex/rust-dangerous"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]
keywords = ["parsing", "simd", "untrusted"]

[features]
default = ["std", "full-backtrace", "simd", "unicode"]
# Enables `std::error::Error` support.
std = ["alloc"]
# Enables allocations.
alloc = []
# Enables all supported SIMD optimisations.
simd = ["std", "memchr/std", "bytecount/runtime-dispatch-simd"]
# Enables improved unicode printing support.
unicode = ["unicode-width"]
# Enables full context backtraces.
full-backtrace = ["alloc"]

[dependencies]
zc = { version = "0.4", optional = true, default-features = false }
nom = { version = "7", features = ["alloc"], optional = true, default-features = false }
regex = { version = "1.4", optional = true }
memchr = { version = "2.4", optional = true, default-features = false }
bytecount = { version = "0.6", optional = true }
unicode-width = { version = "0.1", optional = true }

[dev-dependencies]
zc = "0.4"
paste = "1.0"
indoc = "1.0"
anyhow = "1.0"
imap-proto = "0.15"
colored-diff = "0.2.2"

[[example]]
name = "json"
required-features = ["std"]

[[example]]
name = "streaming"
required-features = ["std"]

[[example]]
name = "zerocopy"
required-features = ["zc"]

[[example]]
name = "nom"
required-features = ["nom"]

[[test]]
name = "test_nom"
required-features = ["nom", "full-backtrace"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
