[package]
name = "dangerous-fuzz"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
libfuzzer-sys = "0.3"

[dependencies.dangerous]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "general"
path = "fuzz_targets/general.rs"
test = false
doc = false
