[package]
name = "dangerous-fuzz"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dangerous]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "general"
path = "fuzz_targets/general.rs"
test = false
doc = false

[[bin]]
name = "string"
path = "fuzz_targets/string.rs"
test = false
doc = false

[[bin]]
name = "display"
path = "fuzz_targets/display.rs"
test = false
doc = false
